geth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geth-holesky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geth
  template:
    metadata:
      labels:
        app: geth
    spec:
      containers:
      - name: geth
        image: ethereum/client-go:latest
        args:
        - --holesky
        - --syncmode=snap
        - --http
        - --http.addr=0.0.0.0
        - --http.api=eth,net,web3
        ports:
        - containerPort: 8545
---
apiVersion: v1
kind: Service
metadata:
  name: geth-service
spec:
  selector:
    app: geth
  ports:
  - port: 8545
    targetPort: 8545
  type: ClusterIP
