geth-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: geth-service-nodeport
spec:
  selector:
    app: geth-v2
  ports:
  - port: 8545
    targetPort: 8545
    nodePort: 30545
  type: NodePort
